CR-2003-04-04-0  Bugfix:    - commd ignored first message for commlib client
                            in case of priority tags messages (used for
                            qmaster <-> execd communication). The first 
                            message was ignored when more than one message
                            with the same priority tag was ready to send.
                            - performance improvement in search_message()
                              (test function parameter outside of search
                               loop)
                            - performance improvement in 
                              look4timeouts_messages()
                              (check message list for timeouts only once
                               in a second)
                 Issue:     523
                 Bugtraq:   4842844
                 Review:    AH
                 Changed:   commd

EB-2003-04-04-0  Bugfix:    jobs suspended due to calendar were handled as
                            running jobs within scheduler
                            (see EB-2003-03-26-1)
                 Changed:   sge_schedd
                 Review:    AH

RC-2003-04-03-0  Bugfix:    Can't compile Input.c on Linux
                 Issue:     507
                 Changed:   3rdparty/qmon/Xbae/Input.c                 

EB-2003-04-03-0  Bugfix:    Unable to delete task array job with negative 
                            increment
                 Issue:     509
                 Bugtraq:   4841414
                 Changed:   qsub, qmon
                 Review:    JG

EB-2003-03-27-1  Bugfix:    sharetree can't be modified
                 Issue:     515
                 Bugtraq:   4838636
                 Changed:   sge_qmaster
                 Review:    AS

AH-2003-03-27-0  Bugfix:    qrong qstat -j diagnosis message wrongly indicates 
                            not enough PE slots
                 Issue:     415
                 Bugtraq:   4775325