@@ -356,6 +356,66 @@ void sgeee_resort_pending_jobs(lList **job_list, lList *orderlist)
 
    DENTER(TOP_LAYER, "sgeee_resort_pending_jobs");
    if (next_job) {
+#if 1 /* EB: incorrect tickets for E and R tasks */
+      u_long32 job_id = lGetUlong(next_job, JB_job_number);
+      lListElem *tmp_task = lFirst(lGetList(next_job, JB_ja_tasks));
+      lListElem *jep = NULL;
+      lListElem *insert_jep = NULL;
+      double ticket;
+
+      if (tmp_task == NULL) {
+         lList *range_list = lGetList(next_job, JB_ja_n_h_ids);
+         u_long32 ja_task_id = range_list_get_first_id(range_list, NULL);
+         sge_task_ref_t *tref = task_ref_get_first(job_id, ja_task_id);
+         lListElem *ja_task_template = 
+                                   lFirst(lGetList(next_job, JB_ja_template));
+         lListElem *order = NULL;
+
+         tmp_task = ja_task_template;
+
+         /*
+          * Update pending tickets in template element
+          */
+         task_ref_copy_to_ja_task(tref, ja_task_template);
+
+         /* 
+          * Update pending tickets in ORT_ptickets-order which was
+          * created previously
+          */
+         for_each(order, orderlist) {
+            if (lGetUlong(order, OR_type) == ORT_ptickets &&
+                lGetUlong(order, OR_job_number) == job_id) {
+               lListElem *order_job = lFirst(lGetList(order, OR_joker));
+               lListElem *order_task = lFirst(lGetList(order_job, JB_ja_tasks));
+
+               task_ref_copy_to_ja_task(tref, order_task);
+               break;
+            }
+         }
+      }
+
+      /*
+       * Re-Insert job at the correct possition
+       */
+      lDechainElem(*job_list, next_job);
+      ticket = lGetDouble(tmp_task, JAT_ticket);
+      for_each(jep, *job_list) {
+         u_long32 job_id2 = lGetUlong(jep, JB_job_number);
+         lListElem *tmp_task2 = lFirst(lGetList(jep, JB_ja_tasks));
+         double ticket2;
+      
+         if (tmp_task2 == NULL) {
+            tmp_task2 = lFirst(lGetList(jep, JB_ja_template));
+         }
+         ticket2 = lGetDouble(tmp_task2, JAT_ticket);
+         if (ticket > ticket2 || (ticket == ticket2 && job_id < job_id2)) {
+            break;
+         }
+         insert_jep = jep;
+      }
+ 
+      lInsertElem(*job_list, insert_jep, next_job);
+#else
       u_long32 job_id = lGetUlong(next_job, JB_job_number);
       lList *range_list = lGetList(next_job, JB_ja_n_h_ids);
       u_long32 ja_task_id = range_list_get_first_id(range_list, NULL);
@@ -370,7 +430,6 @@ void sgeee_resort_pending_jobs(lList **job_list, lList *orderlist)
        * Update pending tickets in template element
        */
       task_ref_copy_to_ja_task(tref, ja_task_template);
-
 
       /* 
        * Update pending tickets in ORT_ptickets-order which was
@@ -404,6 +463,7 @@ void sgeee_resort_pending_jobs(lList **job_list, lList *orderlist)
       }
  
       lInsertElem(*job_list, insert_jep, next_job);
+#endif
    }
    DEXIT;
 }
@@ -3385,23 +3445,13 @@ sge_calc_tickets( sge_Sdescr_t *lists,
    }
 
    /* 
-    * EB: copy tickets 
+    * copy tickets 
     * 
     * Tickets for unenrolled pending tasks where stored an internal table.
     * Now it is necessary to find the ja_task of a job which got the 
     * most tickets. These ticket numbers will be stored in the template
     * element within the job. 
     */
-
-#if 0 /* EB: debug */
-   {
-      lListElem *job;
-
-      for_each(job, queued_jobs) {
-         DPRINTF(("job_id: "u32"\n", lGetUlong(job, JB_job_number)));
-      }
-   }
-#endif
    if (queued_jobs != NULL) {
       sge_task_ref_t *tref = task_ref_get_first_job_entry();
 
@@ -3411,9 +3461,6 @@ sge_calc_tickets( sge_Sdescr_t *lists,
 
          if (job) {
             lListElem *ja_task_template;
-#if 0 /* EB: debug */
-   DPRINTF(("tref->job_number: "u32"\n", tref->job_number));         
-#endif
 
             ja_task_template = lFirst(lGetList(job, JB_ja_template));
 
